Horde3DEditor: fix frameless fullscreen mode Horde3DEditor: fix navigation in case of active camera is currently selected

--- a/Horde3DEditor/src/HordeSceneEditor/HordeSceneEditor.ui
+++ b/Horde3DEditor/src/HordeSceneEditor/HordeSceneEditor.ui
@@ -19,22 +19,25 @@
   </property>
   <widget class="QWidget" name="m_centralwidget">
    <layout class="QVBoxLayout">
-    <property name="margin">
-     <number>3</number>
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>0</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
+     <number>0</number>
     </property>
     <item>
-     <widget class="QFrame" name="m_glFrame">
+     <widget class="QWidget" name="m_glFrame" native="true">
       <property name="sizePolicy">
        <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
         <horstretch>0</horstretch>
         <verstretch>0</verstretch>
        </sizepolicy>
-      </property>
-      <property name="frameShape">
-       <enum>QFrame::StyledPanel</enum>
-      </property>
-      <property name="frameShadow">
-       <enum>QFrame::Raised</enum>
       </property>
      </widget>
     </item>
