--- a/Horde3DEditor/src/HordeSceneEditor/resources.qrc
+++ b/Horde3DEditor/src/HordeSceneEditor/resources.qrc
@@ -18,4 +18,7 @@
         <file>Resources/logo.png</file>
         <file>Resources/scale.png</file>
     </qresource>
+    <qresource prefix="/Shaders" >
+        <file>im3d/im3d.glsl</file>
+    </qresource>
 </RCC>
